<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.oneproject.www.allinone.DiscoveryActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dip"
            android:orientation="horizontal"
            >

            <Button
                android:paddingLeft="10dp"
                android:background="@drawable/drawer_bg"
                android:id="@+id/btn_discover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/discover"
                android:text="@string/btn_discover" />

        </LinearLayout>

        <FrameLayout
            android:layout_margin="2dp"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <ListView
                android:id="@+id/output"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="#00000000"
                android:dividerHeight="0dip" />

            <TextView
                android:id="@+id/list_empty"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical"
                android:text="@string/discover_empty"
                android:textSize="10dip"
                android:typeface="monospace" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/info_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/drawer_bg"
            android:orientation="vertical"
            android:paddingBottom="5dip"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:paddingTop="10dip">

            <TextView
                android:id="@+id/info_ip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="10dip"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/info_in"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_unknown"
                android:textSize="10dip"
                android:typeface="monospace" />

            <TextView
                android:id="@+id/info_mo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="10dip"
                android:typeface="monospace" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp">
            <Button
                android:background="@drawable/drawer_bg"
                android:id="@+id/btnCancel_discovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancel"
                android:layout_margin="2dp"
                android:layout_weight="1"/>
            <Button
                android:layout_margin="2dp"
                android:background="@drawable/drawer_bg"
                android:id="@+id/btnSubmit_discovery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_apply"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
